@@ -1005,7 +1005,7 @@ void CodeEdit::mousePressEvent(QMouseEvent* e)
     if (e->modifiers() == (Qt::AltModifier | Qt::ShiftModifier) && mAllowBlockEdit)
         setContextMenuPolicy(Qt::PreventContextMenu);
     if (e->button() == Qt::RightButton && e->pos().x() <= 0) {
-        showLineNrContext(e->pos());
+        showLineNrContextMenu(e->pos());
         done = true;
     } else if (e->modifiers() & Qt::AltModifier && mAllowBlockEdit) {
         QTextCursor cursor = cursorForPosition(e->pos());
@@ -1224,7 +1224,7 @@ void CodeEdit::contextMenuEvent(QContextMenuEvent* e)
     delete menu;
 }
 
-void CodeEdit::showLineNrContext(const QPoint &pos)
+void CodeEdit::showLineNrContextMenu(const QPoint &pos)
 {
     int line = cursorForPosition(pos).blockNumber() + 1;
     bool hasBp = mBreakpoints.contains(line) || mAimedBreakpoints.contains(line);
@@ -1240,6 +1240,12 @@ void CodeEdit::showLineNrContext(const QPoint &pos)
             emit delBreakpoint(line);
         else
             emit addBreakpoint(line);
+    });
+    menu.addAction("Remove previous breakpoints", this, [this, line]() {
+        emit delBreakpoints(line, true);
+    });
+    menu.addAction("Remove subsequent breakpoints", this, [this, line]() {
+        emit delBreakpoints(line, false);
     });
     menu.addAction("Remove all breakpoints", this, [this]() {
         emit delAllBreakpoints();
