@@ -131,7 +131,7 @@ protected:
     void paintEvent(QPaintEvent *e) override;
     void contextMenuEvent(QContextMenuEvent *e) override;
 
-    void showLineNrContext(const QPoint &pos);
+    void showLineNrContextMenu(const QPoint &pos);
     virtual QString lineNrText(int blockNr);
     virtual bool showLineNr() const;
     virtual bool showFolding() const;
@@ -166,6 +166,7 @@ signals:
     void jumpToHRef(const QString &href);
     void addBreakpoint(int line);
     void delBreakpoint(int line);
+    void delBreakpoints(int line, bool before);
     void delAllBreakpoints();
     void getProjectHasErrors(bool *hasErrors);
     void delAllProjectErrors();
